loopfor.LoopStairs.scala.code
while(true) {
  poseBrosse()

  while (!estFaceMur()) {
    avance()
  }

  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  
}